@@ -1,5 +1,5 @@
 *.lo
-*.la
+libmagic.la
 .deps
 .depend
 .depend-done
