@@ -22,6 +22,7 @@
 	- permit Obsoletes: /path/to/file.
 	- permit Conflicts: /path/to/file.
 	- free rpmrc when looping on --target arches (#127730).
+	- port to internal file-4.10 libmagic rather than libfmagic.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
